--- a/Web Drummer/style.css
+++ b/Web Drummer/style.css
@@ -9,6 +9,22 @@ body, html {
   padding: 0;
 }
 
+input {
+  font-family: 'Raleway', sans-serif;
+  min-height: 10vh;
+  border: .4rem solid black;
+  border-radius: .5rem;
+  margin: 1rem;
+  font-size: 5rem;
+  padding: 1rem 1rem;
+  transition: all .07s ease;
+  width: 50rem;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 .5rem black;
+}
+
 .background {
   display: flex;
   align-items: center;
@@ -26,20 +42,48 @@ body, html {
   justify-content: center;
 }
 
+p {
+  font-family: 'Raleway', sans-serif;
+  /* display: block; */
+  font-size: 4rem;
+}
+
+.click {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.clicks {
+  border: .4rem solid black;
+  border-radius: .5rem;
+  margin: .5rem;
+  font-size: 1.5rem;
+  padding: 1rem 15rem;
+  transition: all .07s ease;
+  width: 10rem;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 .5rem black;
+}
+
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 70vh;
   align-items: center;
   justify-content: center;
 }
 
 .key {
+  font-family: 'Raleway', sans-serif;
   border: .4rem solid black;
   border-radius: .5rem;
   margin: 1rem;
   font-size: 1.5rem;
-  padding: 1rem .5rem;
+  padding: .5rem .5rem;
   transition: all .07s ease;
   width: 10rem;
   text-align: center;
