--- a/Clock/styles.css
+++ b/Clock/styles.css
@@ -1,5 +1,4 @@
 html {
-  /* background: url(../images/Layer1.png); */
   background-size: cover;
   font-family: 'helvetica neue';
   text-align: center;
@@ -34,9 +33,33 @@ body {
   /* account for the height of the clock hands */
 }
 
-.hand {
+.hand-second-hand {
+  width: 50%;
+  height: 2px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition: all 0.05s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.hand-min-hand {
   width: 50%;
   height: 6px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition: all 0.05s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.hand-hour-hand {
+  width: 50%;
+  height: 8px;
   background: black;
   position: absolute;
   top: 50%;
